--- a/Norriq-Solutions/CSS/NORRIQSolutionsFrontPage.css
+++ b/Norriq-Solutions/CSS/NORRIQSolutionsFrontPage.css
@@ -1,3 +1,10 @@
 ﻿.header-logo-solutions {
     padding-top: 15px;
 }
+
+.main-body {
+    color: white;
+    padding-top: 100px;
+    text-align: center;
+    font-size: 20px;
+}
